# texfmt

./: CMakeLists.txt  CMakePresets.json  readme.md
src/: main.cc  rand.hh  type.hh
src/fmt/: r11g11b10.hh  rgb9e5.hh  rgb9e5_sqrt.hh
src/math/: clamp.hh
